@@ -39,6 +39,7 @@ See ADR-54 for the details.
 - https://github.com/eclipse-sirius/sirius-components/issues/1176[#1176] [diagram] Fix potential ConcurrentModificationException in ViewDiagramDescriptionConverter when manipulating diagrams. This bug was introduced by the https://github.com/eclipse-sirius/sirius-components/issues/1152[#1152].
 - https://github.com/eclipse-sirius/sirius-components/issues/1171[#1171] [workbench] Fix the overflow behavior of the side panels when they are resized horizontally
 - https://github.com/eclipse-sirius/sirius-components/issues/1115[#1115] [workbench] Stop using the deprecated props `rowsMax`
+- https://github.com/eclipse-sirius/sirius-components/issues/1219[#1219] [diagram] Fixed diagram svg export diamond arrow path
 
 === Improvements
 
